--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ tests/_support/_generated
 #vagrant folder
 /.vagrant
 
-#assets and runtime
+#custom ignore
 /runtime
 /web/assets
+/config/db.php
